k8s/gitea/gitea-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitea
  name: gitea
  namespace: gitea
spec:
  selector:
    matchLabels:
      app: gitea
  strategy: {}
  template:
    metadata:
      labels:
        app: gitea
    spec:
      restartPolicy: Always
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: gitea-data
      containers:
      - name: gitea
        image: gitea/gitea:1.22.3
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
        volumeMounts:
        - name: data
          mountPath: /data
