k8s/gitea/gitea-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: gitea
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
  - host: git.morrislan.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea-web
            port:
              number: 80
  tls:
  - hosts:
    - git.morrislan.net
    secretName: gitea-tls
